solved the overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
+/* * {
+    outline: dashed red;
+} */
 body {
     background-color: black;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
-    margin-top: 3rem;
-    margin-bottom: 3rem
+    margin: auto;
 }
 
 h1 {
@@ -14,7 +16,7 @@ h2 {
 }
 
 header > img {
-    width: 60%;
+    max-width: 85vw;
     padding: 20px;
     filter: drop-shadow(1px 1px 2px white)
         drop-shadow(1px 1px 7px white);
@@ -26,17 +28,17 @@ nav {
     background-color: white;
 }
 nav ul {
-    list-style: none;
     text-align: center;
+    list-style: none;
 }
 nav li {
     display: inline-block;
+    align-content: center;
 }
 nav a {
     display: inline-block;
     padding: 5px;
     margin: 5px 25px;
-    text-align: center;
     text-decoration: none;
     color: white;
     text-shadow: 1px 1px 1px black,
@@ -56,8 +58,7 @@ section {
 }
 article {
     flex: 1;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: auto 10px;
 }
 
 footer {
@@ -65,8 +66,10 @@ footer {
 }
 footer div {
     flex: 1;
-    margin: auto 25px;
+    padding: 5px;
+    margin: auto;
+    text-align: center;
 }
 footer img {
-    width: 30%
+    width: 15vw
 }
